--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
 <article>
-  <h1>עמוד הבית</h1>
-  <a routerLink="about">מעבר פנימי לעמוד אודותינו</a>
+  <h1>עמוד הבית של האפליקציה המתארחת</h1>
+  <a routerLink="about">מעבר פנימי לעמוד פנימי</a>
 </article>
